# pymono

.github/: docker-config.env
.github/workflows/: docker-build-publish.yml  manual-docker-build.yml  validate-dockerfiles.yml
apps/api/: Dockerfile  main.py  pyproject.toml
docker/: docker-compose.yaml
docs/: docker-workflows.md
scripts/: build-docker.sh
services/: pyproject.toml
shared/: pyproject.toml
