[project]
name = "services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fon Godwill Ivan Tana", email = "ivan8tana@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # local
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ref: https://github.com/astral-sh/uv/issues/6371
[tool.uv.sources]
shared = { path="../shared", editable=true }
